# libGUI3D

./: CMakeLists.txt  demo.cpp
ImGuiExtension/: CMakeLists.txt
ImGuiExtension/include/ImGuiExtension/: LocalFileSystem.h
ImGuiExtension/source/: LocalFileSystem.cpp  tinyfiledialogs.c
cmake/: FindFreeType2.cmake  Findgl3w.cmake  UseCxxTools.cmake  UseImGUI.cmake
cmake/cmake_macro_addExternalProject/: macro.cmake
libGUI/: CMakeLists.txt  GUI.cpp  GUI.h
libGUI/TEST/: CMakeLists.txt  fixed_window.cpp  simple_window.cpp
libGUI3D/: CMakeLists.txt  GUI3D.cpp  GUI3D.h  ImageDrawer.cpp  PointsRenderer.cpp  camera_control.h  geodesicPoseGenerator.h  glCamera.hpp  glImageRenderer.h  glMesh.hpp  glModel.hpp  glShader.hpp  glUtils.cpp  glUtils.hpp  imGuiImageRenderer.h  projection_control.cpp  projection_control.hpp
libGUI3D/Shaders/: 2D.vs  2D_image.vs  2D_in_3D.fs  2D_in_3D.vs  CalNormal.cu  blending.vs  camera_shader.fs  camera_shader.vs  circle.fs  circle.gs  circle.vs  depth.fs  grid.fs  grid.vs  lightCaster.fs  lightCaster.vs  lightCasterM.fs  lightCasterM.vs  lightingTexture.fs  materials.fs  materials2.fs  model.fs  model_reflection.fs  monoCube.fs  monoTexture.fs  monoTone.fs  screen.fs  showDepth.fs  simple.fs  simple.vs  skyboxRefraction.fs  surfel.fs  surfel.gs  surfel.vs  verticesWithNormal.fs  verticesWithNormal.vs  verticesWithNormal_white.fs  withNormal.fs  withNormal.vs
libGUI3D/include/GUI3D/: BBoxDrawer.h  BoxDrawer.h  CameraDrawer.h  EllipsoidDrawer.h  GUI3D.h  ImGuiImgRender.h  ImageDrawer.h  ObjectDrawerBase.h  PointsRenderer.h  TrajectoryDrawer.h  camera_control.h  glCamera.hpp  glMaterialLighting.hpp  glMesh.hpp  glModel.hpp  glPlyLoader.hpp  glShader.hpp  glUtils.hpp  imGuiUtils.h  meshDrawer.h  projection_control.hpp
libGUI3D/src/: BBoxDrawer.cpp  BoxDrawer.cpp  CameraDrawer.cpp  EllipsoidDrawer.cpp  GUI3D.cpp  ImageDrawer.cpp  PointsRenderer.cpp  TrajectoryDrawer.cpp  glUtils.cpp  meshDrawer.cpp  projection_control.cpp
